# CameraBackend

./: CMakeLists.txt  cameras.cpp  cameras.hpp  main.cpp
pomiary/: d455_measurements.csv  d455_measurements_0.csv  gemini-335l_measurements_0.csv  intel_filtry.csv  oak-d-pro_measurements.csv  oak-d-pro_measurements_0.csv  oak_filtry.csv  pomiary_wstepne_01_04_oak_intel.ods  ref.csv  reference.txt  zed2i_measurements.csv  zed2i_measurements_0.csv
pomiary/changing_roi_lamps/: d455_measurements_0.csv  gemini-335l_measurements_0.csv  oak-d-pro_measurements_0.csv  refernce.txt  zed2i_measurements_0.csv
pomiary/changing_roi_sunlight/: gemini.csv  oak.csv  realsense.csv  reference.txt  zed.csv
pomiary/const_roi_lamps/: d455_measurements_0.csv  gemini-335l_measurements_0.csv  oak-d-pro_measurements_0.csv  refernce.txt  zed2i_measurements_0.csv
pomiary/const_roi_sunlight/: d455_measurements_0.csv  gemini-335l_measurements_0.csv  oak-d-pro_measurements_0.csv  reference.txt  zed2i_measurements_0.csv
